# Pocket-Flow-Meter

./: .gitignore  Cargo.toml  README.md  connectior.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: technical_notes.md
esp32s3/: Cargo.toml
esp32s3/.cargo/: config.toml
sensirion-SLF/: Cargo.toml
sensirion-SLF/src/: lib.rs
