[package]
edition = "2021"
name = "flow-meter"
rust-version = "1.86"
version = "0.1.0"
default-run = "flow-meter"

[[bin]]
name = "flow-meter"
path = "./src/bin/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }

critical-section = "1.2.0"
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
log = "0.4.27"
kolibri-embedded-gui = "0.1.0"
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
embedded-charts = { version = "0.3.0", default-features = false, features = [
    "no_std",
    "line",
    "floating-point",
    "animations",
    "color-support",
] }
micromath = "2.1.0"
esp-alloc = "0.8.0"
anyhow = { version = "1.0", default-features = false }

sensirion-SLF = { git = "https://github.com/SebastianHambura/Sensirion-SLF", features = ["fake_sensor"] }
button-driver = {version = "0.2.4", features = ["esp"] }
embedded-hal = "1.0.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
